--- a/style.scss
+++ b/style.scss
@@ -48,3 +48,59 @@ $border-color: #BEC9DA;
   width: 1200px;
   margin: 0 auto;
 }
+
+header {
+  height: 70px;
+	width: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+	position: fixed;
+
+  .container {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    height: 100%;
+  }
+
+  .main-nav ul {
+    display: flex;
+    gap: 20px;
+
+    .nav-item {
+      a {
+        color: $secondary;
+        font-size: 18px;
+        font-weight: 600;
+        text-decoration: none;
+        position: relative;
+				transition: color .15s ease-in-out;
+
+        // Valeurs initiales pour le lien actif
+        &::after {
+          content: "";
+          background-color: $primary;
+          display: block;
+          width: 0%;
+          height: 2px;
+          position: absolute;
+          left: 0;
+          bottom: -8px;
+          transition: width .15s ease-in-out;
+        }
+      }
+
+      a.active::after,
+      a:hover::after {
+        width: 100%;
+      }
+
+			a:active {
+				color: lighten($primary, 30);
+			}
+
+			a:active::after {
+				background-color: lighten($primary, 30);
+			}
+    }
+  }
+}
