--- a/style.css
+++ b/style.css
@@ -87,6 +87,15 @@ table {
   margin: 0 auto;
 }
 
+body {
+  background-color: #F9F9F9;
+  font-family: "Hind", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #344154;
+}
+
 header {
   height: 70px;
   width: 100%;
@@ -131,4 +140,24 @@ header .main-nav ul .nav-item a:active {
 }
 header .main-nav ul .nav-item a:active::after {
   background-color: #2e5ec6;
+}
+
+.logo {
+  font-weight: bold;
+  font-size: 22px;
+  color: #11234A;
+}
+.logo::before {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #11234A;
+}
+
+.header-background {
+  height: 320px;
+  background-image: url("assets/img/header-background.jpg");
+  background-size: cover;
 }/*# sourceMappingURL=style.css.map */
