--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+}
+
+.icon-filled {
+  font-variation-settings: "FILL" 1;
+}
+
 @font-face {
   font-family: "Hind";
   src: url("assets/fonts/Hind-Light.ttf") format("ttf");
@@ -160,4 +168,73 @@ header .main-nav ul .nav-item a:active::after {
   height: 320px;
   background-image: url("assets/img/header-background.jpg");
   background-size: cover;
+}
+
+.profil {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: -40px;
+}
+.profil img {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  border: 4px solid #FFFFFF;
+  box-shadow: 0 2px 5px rgba(52, 65, 82, 0.1);
+}
+.profil .profil-actions {
+  display: flex;
+  gap: 20px;
+}
+
+.profil-infos {
+  text-align: center;
+}
+.profil-infos .name {
+  color: #11234A;
+  font-weight: 600;
+  font-size: 26px;
+  margin-bottom: 10px;
+}
+.profil-infos .social-contact {
+  color: #344154;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 0 15px;
+  border-radius: 6px;
+  height: 36px;
+  line-height: 36px;
+  border: 0;
+  font-size: 14px;
+  font-weight: 500;
+  transition: all 0.15s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #344154;
+  color: #DAE0EE;
+}
+
+.btn-primary:hover {
+  background-color: #516683;
+}
+
+.btn-outline {
+  background-color: #FFFFFF;
+  color: #344154;
+  border: 1px solid #BEC9DA;
+}
+
+.btn-outline:hover {
+  background-color: #344154;
+  color: #DAE0EE;
 }/*# sourceMappingURL=style.css.map */
