--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,15 @@
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+.icon-filled {
+	font-variation-settings: 'FILL' 1;
+}
+
 @font-face {
   font-family: "Hind";
   src: url("assets/fonts/Hind-Light.ttf") format("ttf");
@@ -135,4 +147,77 @@ header {
 	height: 320px;
 	background-image: url('assets/img/header-background.jpg');
 	background-size: cover;
+}
+
+.profil {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	margin-top: -40px;
+
+	img {
+		width: 160px;
+		height: 160px;
+		border-radius: 50%;
+		border: 4px solid #FFFFFF;
+		box-shadow: 0 2px 5px rgba(52, 65, 82, 0.1);
+	}
+
+	.profil-actions {
+		display: flex;
+		gap: 20px;
+	}
+}
+
+.profil-infos {
+	text-align: center;
+
+	.name {
+		color: $primary;
+		font-weight: 600;
+		font-size: 26px;
+		margin-bottom: 10px;
+	}
+
+	.social-contact {
+		color: $secondary;
+		font-weight: 400;
+		font-size: 16px;
+	}
+}
+
+.btn {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	padding: 0 15px;
+	border-radius: 6px;
+	height: 36px;
+	line-height: 36px;
+	border: 0;
+	font-size: 14px;
+	font-weight: 500;
+	transition: all .15s ease-in-out;
+	cursor: pointer;
+}
+
+.btn-primary {
+	background-color: $secondary;
+	color: $white;
+}
+
+.btn-primary:hover {
+	background-color: lighten($secondary, 15);
+}
+
+.btn-outline {
+	background-color: #FFFFFF;
+	color: $secondary;
+	border: 1px solid $border-color; 
+}
+
+.btn-outline:hover {
+	background-color: $secondary;
+	color: $white;
 }
