--- a/style.scss
+++ b/style.scss
@@ -221,3 +221,147 @@ header {
 	background-color: $secondary;
 	color: $white;
 }
+
+.main-container {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	gap: 60px;
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
+
+h2 {
+	color: $primary;
+	font-weight: 600;
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+
+.intern-link {
+	display: inline-flex;
+	align-items: center;
+	gap: 3px;
+	color: $secondary;
+	font-size: 14px;
+	font-weight: 600;
+	text-decoration: none;
+}
+
+.content .intern-link {
+	margin-top: 20px;
+}
+
+.content:not(:last-child) {
+	padding-bottom: 20px;
+	border-bottom: 1px solid $border-color;
+}
+
+.content:not(:first-child) {
+	margin-top: 20px;
+}
+
+aside,
+.card {
+	background-color: #ffffff;
+	border: 1px solid $border-color;
+	border-radius: 6px;
+	padding: 20px;
+}
+
+aside {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	align-self: start;
+}
+
+h3 {
+	font-size: 14px;
+	font-weight: 600;
+}
+
+h4 {
+	color: $primary;
+	font-size: 16px;
+	font-weight: bold;
+
+	span {
+		color: $secondary;
+		font-size: 14px;
+		font-weight: 300;
+	}
+}
+
+.formation p {
+	font-size: 14px;
+}
+
+.aside-content {
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+
+.aside-content.grades {
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+
+	.icon-filled {
+		color: #F4A32A;
+	}
+}
+
+.aside-content:last-child {
+	border-top: 1px solid $border-color;
+	padding-top: 20px;
+}
+
+.grade-items.js-grades {
+	cursor: pointer;
+}
+
+.experiences {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 60px;
+	margin-top: 60px;
+}
+
+.xp-header {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+
+	.xp-logo-container {
+		width: 54px;
+		height: 54px;
+		border-radius: 50%;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.xp-logo-container.orange {
+		background-color: #FFE9DA;
+
+		.xp-logo {
+			width: 75px;
+		}
+	}
+
+	.xp-logo-container.blue {
+		background-color: #D3ECFF;
+
+		.xp-logo {
+			width: 50px;
+		}
+	}
+
+	.xp-header-details {
+		h2 {
+			margin: 0;
+		}
+	}
+}
