--- a/style.css
+++ b/style.css
@@ -370,4 +370,38 @@ h4 span {
 }
 .xp-header .xp-header-details h2 {
   margin: 0;
+}
+
+footer {
+  background-color: #344154;
+  padding: 30px 0;
+}
+footer .logo {
+  color: #DAE0EE;
+}
+footer .logo::before {
+  background-color: #DAE0EE;
+}
+footer .intern-link {
+  color: #DAE0EE;
+}
+footer .social-container {
+  background-color: #DAE0EE;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+footer .right-side {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 20px;
 }/*# sourceMappingURL=style.css.map */
