--- a/style.scss
+++ b/style.scss
@@ -365,3 +365,43 @@ h4 {
 		}
 	}
 }
+
+footer {
+	background-color: $secondary;
+	padding: 30px 0;
+
+	.logo {	
+		color: $white;
+	}
+
+	.logo::before {
+		background-color: $white;
+	}
+
+	.intern-link {
+		color: $white;
+	}
+
+	.social-container {
+		background-color: $white;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.right-side {
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		gap: 20px;
+	}
+}
